--- a/render.yaml
+++ b/render.yaml
@@ -15,7 +15,7 @@ services:
       - key: JWT_EXPIRES_IN
         value: 7d
       - key: FRONTEND_URL
-        value: https://fleet-hub-frontend.vercel.app
+        value: https://fleethubet.vercel.app/
       - key: DATABASE_URL
         fromDatabase:
           name: fleethub-db
