--- a/Frontend/env.example
+++ b/Frontend/env.example
@@ -1,5 +1,5 @@
 # API Configuration
-VITE_API_URL="http://localhost:3001"
+VITE_API_URL="https://fleethub-backend.onrender.com"
 
 # Environment
 VITE_NODE_ENV="production"
