--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,7 +19,9 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "db:seed": "ts-node prisma/seed.ts",
+    "db:seed:dev": "ts-node scripts/seed-dev.ts"
   },
   "dependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -41,6 +43,9 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "devDependencies": {
     "@nestjs/schematics": "^10.0.0",
