--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: fleethub-backend
     env: node
     plan: free
-    buildCommand: cd Backend && yarn install --production=false && yarn prisma generate && yarn prisma migrate deploy && yarn build
+    buildCommand: cd Backend && yarn install --production=false && yarn prisma generate && yarn prisma migrate deploy && yarn db:seed && yarn build
     startCommand: cd Backend && yarn start:prod
     envVars:
       - key: NODE_ENV
