--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,8 @@
   "outputDirectory": "dist",
   "framework": "vite",
   "env": {
-    "VITE_API_URL": "https://fleethub-backend.onrender.com"
+    "VITE_API_URL": "https://fleethub-backend.onrender.com",
+    "VITE_NODE_ENV": "production"
   },
   "rewrites": [
     {
