change the database

--- a/Backend/env.example
+++ b/Backend/env.example
@@ -1,5 +1,8 @@
 # Database
+# For local development:
 DATABASE_URL="postgresql://username:password@localhost:5432/fleethub"
+# For free remote database (Neon/Supabase):
+# DATABASE_URL="postgresql://user:password@ep-xxx.neon.tech/dbname?sslmode=require"
 
 # JWT
 JWT_SECRET="your-super-secret-jwt-key-here"
@@ -8,6 +11,8 @@ JWT_EXPIRES_IN="7d"
 # Server
 PORT=3001
 NODE_ENV="production"
+# Public base URL for file serving (use your Render backend URL)
+PUBLIC_BASE_URL="https://your-backend.onrender.com"
 
 # AI Service (Optional)
 NVIDIA_API_KEY="your-nvidia-api-key"
@@ -19,3 +24,12 @@ UPLOAD_PATH="./uploads"
 
 # CORS
 FRONTEND_URL="https://your-frontend-domain.com"
+
+# Optional: Cloud Storage (for permanent file storage)
+# Uncomment if you set up Cloudflare R2 or similar:
+# R2_ACCOUNT_ID="your-r2-account-id"
+# R2_ACCESS_KEY_ID="your-r2-access-key"
+# R2_SECRET_ACCESS_KEY="your-r2-secret-key"
+# R2_BUCKET_NAME="fleethub-uploads"
+# R2_ENDPOINT="https://xxx.r2.cloudflarestorage.com"
+# R2_PUBLIC_URL="https://pub-xxx.r2.dev"
