--- a/render.yaml
+++ b/render.yaml
@@ -15,20 +15,18 @@ services:
       - key: JWT_EXPIRES_IN
         value: 7d
       - key: FRONTEND_URL
-        value: https://fleethubet.vercel.app/
+        value: https://fleethubet.vercel.app
       # Option 1: Use Render's free database (if available)
       # - key: DATABASE_URL
       #   fromDatabase:
       #     name: fleethub-db
       #     property: connectionString
       # Option 2: Use external free database (Neon/Supabase) - RECOMMENDED
-      # Replace with your Neon connection string from neon.tech:
-      - key: DATABASE_URL
-        sync: false  # Set to false and add your connection string in Render dashboard
+      # IMPORTANT: Set DATABASE_URL in Render dashboard Environment tab with your Neon connection string
+      # Do NOT add it here in the yaml file (keep it secure)
       # Public URL for serving uploaded files
-      # Replace with your actual Render backend URL after deployment
       - key: PUBLIC_BASE_URL
-        sync: false  # Set this to https://your-backend.onrender.com in Render dashboard
+        sync: false  # Set this to https://fleethub-backend-6kh2.onrender.com in Render dashboard
     healthCheckPath: /health
 
 # Uncomment below if using Render's database (Option 1)
